--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(//db.onlinewebfonts.com/c/3516b742bdc18fcfacf8c27ed2cdea67?family=Chlakh);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 * {
     padding: 0;
@@ -57,6 +58,7 @@ body {
 #frist-section .container p {
     font-size: 2rem;
     margin-top: 2rem;
+    font-family: 'Poppins', sans-serif;
 }
 
 #second-section {
@@ -93,6 +95,7 @@ body {
     width: 35rem;
     border: 1px solid #d9efe8;
     border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
     outline: none;
 }
 
@@ -106,7 +109,7 @@ body {
     background-color: transparent;
     border: 1px solid #d9efe8;
     border-radius: 10px;
-    font-family: 'Chlakh', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 #second-section .container form button:hover {
