feat:add a css new font

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
     color: #000;
     margin-top: 40px;
     font-size: 1.5rem;
-    font-family: 'Chlakh', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 
