--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: sticky;
+    top: 0;
     background-color: #fff;
     padding: 2rem;
 }
