fix: css font bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(//db.onlinewebfonts.com/c/3516b742bdc18fcfacf8c27ed2cdea67?family=Chlakh);
+@import url('https://db.onlinewebfonts.com/c/3516b742bdc18fcfacf8c27ed2cdea67?family=Chlakh');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 * {
